--- a/packages/docs/src/routes/docs/requirements/index.mdx
+++ b/packages/docs/src/routes/docs/requirements/index.mdx
@@ -9,7 +9,7 @@ A continuación se describen los puntos técnicos que debes de tener en cuenta a
 
 ---
 
-## ¿Como saber que tengo el Node?
+## ¿Como saber que tengo el Node instalado?
 
 Solo debes ejecutar el siguiente comando y esperar que la versión que te arroja sea superior a v16
 
